funcionando hasta componente dialog

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -9,3 +9,9 @@ appTitle=Hola Mundo
 appDescription=A Fiori application.
 #XTIT: Main view title
 title=Hola Mundo
+#List title
+listaPTitle=Items in a list.
+
+
+#texts for Lista.view.xml
+btnListDialog=Hospital inventory
