tabla aun sin controlador

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -3,15 +3,20 @@
 #Texts for manifest.json
 
 #XTIT: Application name
-appTitle=Hola Mundo
+appTitle=Bienvenido a Inventarios en SAP UI5
 
 #YDES: Application description
 appDescription=A Fiori application.
 #XTIT: Main view title
-title=Hola Mundo
-#List title
-listaPTitle=Items in a list.
+title=Bienvenido a Inventarios en SAP UI5
+
+
 
 
 #texts for Lista.view.xml
 btnListDialog=Hospital inventory
+titleList=Lista del oData
+
+#for table
+
+titleTable=Reporte doctores en tabla
